src/test/deca/syntax/invalid/ident_carac_interdit4.deca
//  Description :
//            Identificateur contenant un ù
//
// Résultat:
//token recognition error at: 'ù'
//
{
identificateùr
}